--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,8 @@
+body {
+  background-image: url("../../img/coding-owl-background-img.png");
+  filter: brightness(60%);
+}
+
 // scss-docs-start color-variables
 $blue: #0d6efd !default;
 $indigo: #6610f2 !default;
