--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,19 +1,24 @@
+// scss-docs-start color-variables
+$blue: #231f20;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
+// scss-docs-end color-variables
+
+:root {
+  --bs-body-font-family: "poppins";
+  --bs-body-color: #fff;
+}
+
 body {
   background-image: url("../../img/coding-owl-background-img-transparent.png");
-  background-color: #231f20;
+  background-color: $blue;
   background-size: cover;
   background-repeat: no-repeat;
 }
-
-// scss-docs-start color-variables
-$blue: #0d6efd !default;
-$indigo: #6610f2 !default;
-$purple: #6f42c1 !default;
-$pink: #d63384 !default;
-$red: #dc3545 !default;
-$orange: #fd7e14 !default;
-$yellow: #ffc107 !default;
-$green: #198754 !default;
-$teal: #20c997 !default;
-$cyan: #0dcaf0 !default;
-// scss-docs-end color-variables
