--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,3 @@
 @import "variables";
 
-@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
